--- a/index.html
+++ b/index.html
@@ -150,6 +150,36 @@
     </main>
 
     <script>
+            function recordResponse(response) {
+        // Store the user's response in a GitHub issue
+        const apiUrl = 'https://api.github.com/repos/yourusername/yourrepository/issues';
+        const title = 'User Response';
+        const body = `User responded with: ${response}`;
+
+        fetch(apiUrl, {
+            method: 'POST',
+            headers: {
+                'Authorization': 'Bearer YOUR_GITHUB_TOKEN',
+                'Content-Type': 'application/json',
+            },
+            body: JSON.stringify({ title, body }),
+        })
+        .then(response => {
+            if (response.ok) {
+                console.log('User response recorded on GitHub!');
+            } else {
+                console.error('Failed to record user response on GitHub.');
+            }
+        })
+        .catch(error => console.error('Error:', error));
+        
+        // Perform other actions based on the user's response
+        if (response === 'Yes') {
+            document.getElementById('popup').style.display = 'flex';
+        } else {
+            moveNoButton();
+        }
+    }
         let noButtonClickCount = 0;
 
         function showResponse(response) {
