--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 <script>
     function recordResponse(response) {
         // Store the user's response in a GitHub issue
-        const apiUrl = 'https://github.com/Zach5015/HI/issues';
+        const apiUrl = 'https://api.github.com/repos/Zach5015/HI/issues';
         const title = 'User Response';
         const body = `User responded with: ${response}`;
 
@@ -164,14 +164,13 @@
             },
             body: JSON.stringify({ title, body }),
         })
-        .then(response => {
-            if (response.ok) {
-                console.log('User response recorded on GitHub!');
-            } else {
-                console.error('Failed to record user response on GitHub. Response:', response);
-            }
+ .then(response => response.json())
+        .then(data => {
+            console.log('User response recorded on GitHub! Issue:', data);
         })
-        .catch(error => console.error('Error:', error));
+        .catch(error => {
+            console.error('Failed to record user response on GitHub. Error:', error);
+        });
 
         // Perform other actions based on the user's response
         if (response === 'Yes') {
