--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
     function recordResponse(response) {
         const username = 'Zach5015';
         const repository = 'iloveyou';
-        const apiUrl = `https://api.github.com/repos/${username}/${repository}/issues`;
+        const apiUrl = `https://docs.github.com/repos/${username}/${repository}/issues`;
         const title = 'User Response';
         const body = `User responded with: ${response}`;
 
