--- a/index.html
+++ b/index.html
@@ -110,12 +110,12 @@
 <body>
 
     <header>
-        <h1>Will You Go Out With Me???</h1>
+        <h1>Will You Be My Valentine???</h1>
     </header>
 
     <main>
         <p>Hey there!<br>
-            I've been thinking, and I was wondering if you'd like to go out with me. </p>
+           I was wondering if you'd like to be my valentine. </p>
 
         <!-- Add your GIF URL in the src attribute -->
         <img src="https://gifdb.com/images/high/cute-love-bear-roses-ou7zho5oosxnpo6k.webp" alt="Cute GIF" width="300">
